Update pending tree viewport when top_controls_shown_ratio_ changes

Currently, when the top_controls_shown_ratio_ sync property is changed,
only the active tree's inner/outer clips are updated.

This leads to issues where the pending tree produces content for an out
of date clip rect. This means that upon activation we won't have the
full set of tiles needed to draw the active tree (which has the updated
clip). This leads to flickering as the content is missing initially,
then drawn by the active tree on a subsequent frame.

To address this, LayerTreeHostImpl::UpdateViewportContainerSizes is
moved to LayerTreeImpl::UpdateViewportContainerSizes, allowing it to
be run on either tree. We additionally ensure that in cases where the
pending tree's top_controls_shown_ratio_ may have changed, we call
UpdateViewportContainerSizes.

Bug: 875943
Change-Id: I569921c3d19a0047d339e1b4a4367d81309e0f36
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1730139
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#684956}

Former-commit-id: ec12101240098e3491db1eafd9ad6a3e52095860